# aicompetition

./: .gitignore  .plane_integrator.py.swo  .plane_integrator.py.swp  main.py  pyproject.toml  result.csv  show_bbox.py  show_center.py  train.py
data/: filename.txt  homography_matrix.pkl  homography_matrix_for_train_dataset.pkl  label_2d.py  make_filename.py  write_homography_matrix.py
src/: dataset.py  loss.py  predict.py  render_gt_heatmap.py  test.py  train.py
src/model/: cross_attention.py  detection.py  fpn_neck.py  multiview_detection.py  yolov8_backbone.py
