[project]
name = "prototype-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0,<2.6.0",
    "torchvision>=0.20.0,<0.21.0",
    "torchaudio>=2.5.0,<2.6.0",
    "ultralytics>=8.4.60",
    "scikit-learn>=1.9.0",
    "pandas>=3.0.3",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = {index = "pytorch-cu124"}
torchvision = {index = "pytorch-cu124"}
torchaudio = {index = "pytorch-cu124"}
